# python-newscale

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: readme.md
docs/source/: conf.py  index.rst
examples/: back_and_forth_3d.py  calibrate_frequency.py  list_ports_test.py  list_serial_devices.py  moveBackAndForth_usb.py  multistage_test.py  newscaleserial_test.py  readFirmware.py  read_firmware.py  usb_multistage_test.py
src/newscale/: .stages.py.swp  __init__.py  device_codes.py  errors.py  interfaces.py  multistage.py  new_scale_serial.py  stage.py  stages.py  usbxpress.py
